# glitchforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
glitchforge/: cli.py  core.py  presets.py
glitchforge/effects/: blockshift.py  channel.py  colordrift.py  noise.py  pixelsort.py  scanline.py
tests/: conftest.py  test_cli.py  test_effects.py
